Deleted label elements.

--- a/html-web-page/index.html
+++ b/html-web-page/index.html
@@ -68,11 +68,9 @@
   </table>
   <p>Like what you see? Become a part of the JOTMC family today!</p>
   <form action="">
-    <label for="name"></label>
-    <input type="text" name="name" id="name" placeholder="Your name">
-    <label for="plan"></label>
-    <select name="plan" id="plan">
-      <option value="select">Select Your Plan:</option>
+    <input type="text" name="name" placeholder="Your name">
+    <select name="plan">
+      <option value="">Select Your Plan:</option>
       <option value="basic">Basic Plan</option>
       <option value="delux">Delux Plan</option>
       <option value="jelly_giant">Jelly Giant Plan</option>
