--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -10,51 +10,55 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="image">
-        <img src="images/link.png" alt="link png">
+      <div class="head_column">
+        <h1>Choose your character!</h1>
       </div>
-      <div class="text">
+    </div>
+    <div class="row">
+      <div class="first-column">
+        <img class="image" src="images/link.png" alt="link png">
+      </div>
+      <div class="first-column">
         <h2>Super Smash Bros. Ultimate</h2>
         <p>Super Smash Bros. Ultimate received universal acclaim from both critics and players, with some critics calling it best insallment in the series. It received praise for its large amount of content and fine-tuning of existing Smash gameplay elements, although its online mode was widely criticized.</p>
       </div>
-      <div class="image">
-        <img src="images/yoshi.png" alt="yoshi png">
+      <div class="first-column">
+        <img class="image" src="images/yoshi.png" alt="yoshi png">
       </div>
     </div>
     <div class="row">
-      <div class="img">
-        <img src="images/kirby.png" alt="kirby png">
+      <div class="second-column">
+        <img class="image" src="images/kirby.png" alt="kirby png">
       </div>
-      <div class="img">
-        <img src="images/fox.png" alt="fox png">
+      <div class="second-column">
+        <img class="image" src="images/fox.png" alt="fox png">
       </div>
-      <div class="img">
-        <img src="images/pikachu.png" alt="pikachu png">
+      <div class="second-column">
+        <img class="image" src="images/pikachu.png" alt="pikachu png">
       </div>
-      <div class="img">
-        <img src="images/ness.png" alt="ness png">
+      <div class="second-column">
+        <img class="image" src="images/ness.png" alt="ness png">
       </div>
     </div>
     <div class="row">
-      <div class="text">
+      <div class="third-column">
         <h2>Donkey Kong</h2>
         <p>Donkey Kong is a series of video games featuring the adventures of a gorilla called Donkey Kong, conceived by Shigeru Miyamoto in 1981. The franchise consists mainly of two game genres, but also includes additional spin-off titles of various genres.</p>
         <p>The games of the first genre are mostly single-screen platform/action puzzle types, featuring Donkey Kong as the opponent in an industrial construction setting.</p>
       </div>
-      <div class="image">
-        <img src="images/dk.png" alt="Donkey Kong png">
+      <div class="first-column">
+        <img class="image" src="images/dk.png" alt="Donkey Kong png">
       </div>
     </div>
     <div class="row">
-      <div class="image">
-        <img src="images/mario.png" alt="Mario png">
+      <div class="first-column">
+        <img class="image" src="images/mario.png" alt="Mario png">
       </div>
-      <div class="text">
+      <div class="third-column">
         <h2>Mario</h2>
         <p>Mario is a fictional character in the Mario video game franchise, owned by Nintendo and created by Japanese video game designer Shigeru Miyamoto. Acting as the company's mascot, as well as being the eponymous protagonist of the series, Mario has appeared in over 200 video games since his creation.</p>
         <p>Depicted as a short, pudgy,Italian plumber who resides in the Mushroom Kingdom, his adventures generally center upon rescuing Princess Peach from the Koopa villain Bowser</p>
       </div>
     </div>
-  </div>
 </body>
 </html>
