--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -29,7 +29,7 @@
       </label>
       <label>
         HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?
-        <select name="number" id="number_hiring">
+        <select name="number">
           <option value="one">1-2 Engineers</option>
           <option value="two">3-4 Engineers</option>
           <option value="three">5-6 Engineers</option>
