--- a/javascript-light-bulb/index.html
+++ b/javascript-light-bulb/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>JavaScript Light Bulb</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div></div>
+  <main class="background">
+    <button class="button"></button>
+  </main>
+  <script src="main.js"></script>
 </body>
 </html>
